kubernetes/apps/grocy/grocy/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grocy
  namespace: grocy
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  hostnames:
    - grocy.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grocy
          namespace: grocy
          port: 80
